--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -27,7 +27,7 @@ custom_template/release=""
 debug/export_console_wrapper=1
 application/icon=""
 application/icon_interpolation=4
-application/bundle_identifier="tickslap.game"
+application/bundle_identifier="ticksouls.game"
 application/signature=""
 application/app_category="Games"
 application/short_version=""
